trying to fix home page scroll behavior on mobile

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,12 +1,12 @@
 @import '/src/styles/colors';
 
 .background {
-    position: fixed;
+    top: 0;
+    position: absolute;
     width: 100%;
-    height: 100svh;
+    height: 100vh;
     overflow: hidden;
     user-select: none;
-    overflow: hidden;
 
     #forest { 
         position: fixed;
@@ -63,41 +63,41 @@
         z-index: -1;
         width: 23.206vw; //317
     }
-}
-
-
-#ctaButton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 11.27vw; //154
-    height: 4.25vw; //58
-    border-radius: 0.59vw;
-    background-color: $main-black;
-    position: absolute;
-    text-decoration: none;
-    font-family: "Roboto", sans-serif;
-    font-size: 1.46vw;
-    font-weight: bold;
-    color: $main-white;
-    left: 44.29vw; //605
-    bottom: 3.66vw; //50
-    transition: color 0.3s ease;
-    animation: floatUpDown 3.2s ease-in-out infinite;
-}
-
-#ctaButton:hover {
-    color: $main-primary;
-}
-
-@keyframes floatUpDown {
-    0%, 100% {
-        transform: translateY(0);
+    #ctaButton {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 11.27vw; //154
+        height: 4.25vw; //58
+        border-radius: 0.59vw;
+        background-color: $main-black;
+        position: absolute;
+        text-decoration: none;
+        font-family: "Roboto", sans-serif;
+        font-size: 1.46vw;
+        font-weight: bold;
+        color: $main-white;
+        left: 44.29vw; //605
+        bottom: 3.66vw; //50
+        transition: color 0.3s ease;
+        animation: floatUpDown 3.2s ease-in-out infinite;
     }
-    50% {
-        transform: translateY(-10px);
+    
+    #ctaButton:hover {
+        color: $main-primary;
+    }
+    
+    @keyframes floatUpDown {
+        0%, 100% {
+            transform: translateY(0);
+        }
+        50% {
+            transform: translateY(-10px);
+        }
     }
 }
+
+
 
 /* style.css */ 
 
